didn't compile in java 1.4
git-svn-id: https://scm.mmbase.org/mmbase/trunk@19220 91430c5f-d668-0410-9e7d-dd663366dcfd